--- a/build.gradle
+++ b/build.gradle
@@ -4,22 +4,36 @@ plugins {
     id 'java'
 }
 
+
 group = 'com.ohrlings'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+    maven {
+        name = "GitHub"
+        url = uri('https://maven.pkg.github.com/arrowhead-f/client-library-java-spring')
+        credentials {
+            username = System.getenv('GITHUB_PACKAGES_USERID') ?: userName
+            password = System.getenv('GITHUB_PACKAGES_IMPORT_TOKEN') ?: userToken
+        }
+    }
+
+    maven {
+        url = uri('https://repo.maven.apache.org/maven2/')
+    }
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'ch.qos.logback:logback-classic'
+    implementation 'eu.arrowhead:client-common:4.0'
+    implementation 'eu.arrowhead:core-client-skeleton:4.1.3.11'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
-	implementation 'com.squareup.okhttp3:okhttp' ///, version: '4.9.1'
+	implementation 'com.squareup.okhttp3:okhttp'
     
 }
 
