--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
-    mavenCentral()
+    mavenLocal()
     maven {
         name = "GitHub"
         url = uri('https://maven.pkg.github.com/arrowhead-f/client-library-java-spring')
@@ -28,12 +28,16 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-json'
     implementation 'ch.qos.logback:logback-classic'
-    implementation 'eu.arrowhead:client-common:4.0'
-    implementation 'eu.arrowhead:core-client-skeleton:4.1.3.11'
+    //implementation 'org.projectlombok:lombok:1.18.18'
+    //implementation 'eu.arrowhead:client-library:4.1.3.11'
+    //implementation 'eu.arrowhead:client-common:4.1.3.11'
+    //implementation 'eu.arrowhead:core-client-skeleton:4.1.3.11'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.squareup.okhttp3:okhttp'
+    testImplementation 'com.github.gmazzo:okhttp-mock:1.4.1'
     
 }
 
