--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.output.ansi.enabled=ALWAYS
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.exposure.include=shutdown,health
